removed fixed on mobile

--- a/style.css
+++ b/style.css
@@ -80,12 +80,6 @@ html {
   background-attachment: fixed;
   animation: changeBackground 10s ease-in infinite;
 }
-@media screen and (max-width: 800px) {
-  .header {
-    animation: none;
-    background-image: url("img/food-1.jpg");
-  }
-}
 
 @keyframes changeBackground {
   0%,
@@ -182,7 +176,7 @@ html {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
     animation: none;
     background-image: linear-gradient(
         to right bottom,
